apps/vps/grey-auto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grey-auto
  namespace: grey-auto
spec:
  selector:
    app: grey-auto
  ports:
    - name: http
      port: 80
      targetPort: http
